2.80 (unreleased)
-----------------

- Refactor all asynchronous loops into new mqrecv_lib library.
- Move gps, cell and debug processing into mqrecv-event to reduce number of required db connections.
- Bump version of meitrack lib to bring in B46 command for setting of camera snapshot parameters.


2.79 (2018-09-16)
-----------------

- Remove firmware binary parsing logic from the meitrack chat client now that it is in the meitrack firmware client class.
- Bump meitrack parser library to stop library from printing byte parameters to stdout.


2.78 (2018-09-02)
-----------------

- Change to imei being decoded as a property of the BaseReport so that we don't need to constantly decode it.
- Add logging to show when a client is found when parsing response messages sent back to simchatserver.
- Move datetime calculations to utcnow.
- Bump meitrack lib to bring in parsing of digital pin bits in reversed order.


2.77 (2018-09-01)
-----------------

- Bump geotool db api to bring in string conversion fix.


2.76 (2018-09-01)
-----------------

- Bump geotool db api to bring in sql fix.


2.75 (2018-09-01)
-----------------

- Fix bug in the updating of battery levels.


2.74 (2018-09-01)
-----------------

- Add logging instantiation to mqrecv-event so that we can see the sql statements when in debug mode.
- Bump geotool db lib to bring in logging change.


2.73 (2018-09-01)
-----------------

- Fixup the pool creation on async db clients clients. Now creating one pool per main loop in the mqrecv processors.
- Add new DigitalReport and AnaloguePinReport classes to aid in the logging of io status.
- Fix bug in the handling of datetime objects in the async db process for io pin handling.
- Add ability for battery updates to be processed through the message queue interface.
- Bump geotool db to 1.6 for io and battery changes.
- Bump geotool api to 1.23 for io and battery api changes.


2.72 (2018-09-01)
-----------------
